tests/baselines/reference/objectLiteralShorthandPropertiesFunctionArgument2.errors.txt
tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts(7,5): error TS2345: Argument of type '{ name: string; id: number; }' is not assignable to parameter of type '{ a: string; id: number; }'.
  Property 'a' is missing in type '{ name: string; id: number; }' but required in type '{ a: string; id: number; }'.


==== tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts (1 errors) ====
    var id: number = 10000;
    var name: string = "my name";
    
    var person = { name, id };
    
    function foo(p: { a: string; id: number }) { }
    foo(person);  // error
        ~~~~~~
!!! error TS2345: Argument of type '{ {|name|0|}: string; {|id|1|}: number; }' is not assignable to parameter of type '{ {|a|2|}: string; {|id|3|}: number; }'.
!!! error TS2345:   Property 'a' is missing in type '{ name: string; id: number; }' but required in type '{ a: string; id: number; }'.
!!! related TS2728 tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts:6:19: 'a' is declared here.
!!! annotated symbol 0 tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts:4:16
!!! annotated symbol 1 tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts:4:22
!!! annotated symbol 2 tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts:6:19
!!! annotated symbol 3 tests/cases/conformance/es6/shorthandPropertyAssignment/objectLiteralShorthandPropertiesFunctionArgument2.ts:6:30
    